@@ -13,6 +13,11 @@ Yang Tse (7 Aug 2008)
   used to provide support for a curl_off_t data type which is not gated to
   off_t. Further details are documented inside these mentioned header files.
 
+- Fix CURL_CHECK_DEF so that when the expansion of the preprocessor symbol
+  results in a set of double-quoted strings, this macro will now return an
+  expansion which consists of a single double-quoted string as the result of
+  concatenating all of them.
+
 Yang Tse (5 Aug 2008)
 - Changes done to buildconf script. Validate that autom4te and autoconf, as
   well as aclocal and automake, versions match. Improve removal of previous
